[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Door/Door.png" type="Texture" id=1]
[ext_resource path="res://Objects/Door/DoorModel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Door/DoorBreak.wav" type="AudioStream" id=3]
[ext_resource path="res://Objects/Door/Door.gd" type="Script" id=4]
[ext_resource path="res://Misc/Circle.png" type="Texture" id=5]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.75, 35 )

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 39.0512

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 40 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Door" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 64, 64 )
own_world = true
transparent_bg = true

[node name="Model" type="Spatial" parent="Viewport"]

[node name="Camera" type="Camera" parent="Viewport/Model"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.63435 )
projection = 1
current = true
size = 2.3

[node name="Pivot" type="Spatial" parent="Viewport/Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[node name="DoorModel" parent="Viewport/Model/Pivot" instance=ExtResource( 2 )]

[node name="Knocked" type="Sprite" parent="."]
visible = false
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 3 )
flip_v = true

[node name="KnockArea" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnockArea"]
shape = SubResource( 1 )

[node name="Normal" type="Sprite" parent="."]
scale = Vector2( 2.2, 2.2 )
texture = ExtResource( 1 )

[node name="Terrain" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="Moving" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="Break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
shape = SubResource( 5 )
disabled = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[node name="BulletBlocker" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletBlocker"]
visible = false
shape = SubResource( 6 )

[node name="Debris" type="CPUParticles2D" parent="."]
modulate = Color( 0.443137, 0.207843, 0, 1 )
emitting = false
amount = 12
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
local_coords = false
texture = ExtResource( 5 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.8
scale_amount = 0.3
scale_amount_curve = SubResource( 7 )

[connection signal="body_entered" from="KnockArea" to="." method="_on_KnockArea_body_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
